2013-02-12 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: To avoid clash on freeing resources Tcl_Finalize
    is removed from child process cleanup (Bug #54162)

2013-02-11 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/dio.tcl: fixing nasty bug introduced with Rivet 2.1. When
    method 'store' is updating the call to method update needs a flat list as
    last argument, not just a sigle valued list argument
    * doc/xml/commands.xml: Improved explanation for command abort_page
    * src/apache-2/rivetConf.c: corrected typo in header
    * src/apache-2/apache_request.c: new handling of apache requests largely
    relaxes checks on the 'Content-Type' header (Bug #53661)

2013-02-02 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/apache_request.c,src/apache-2/mod_rivet.c: extending request
    handling also for PUT and DELETE. Applied patch provided by Jeff Lawson in
    bug report #53892 

2013-02-01 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/Makefile.am, src/Makefile.am: removed -v flag from rm command
    in install-data-hook: target to avoid incompatibility with same command's
    implementation in Solaris (Bug: #54181)

2013-01-28 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.[c|h],rivetCore.c: removed hardcoded error code 
    generated by abort_page and defined in the preprocessor symbol ABORTCODE.
    
2013-01-25 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/xml.tcl,rivet/rivet-tcl/tclIndex: New command for XML fragments
    composition

2013-01-20 Massimo Manghi <mxmanghi@apache.org>
    * Makefile.am: added removal of libool created .la files for librivetparser and
    librivet

2012-12-30 Massimo Manghi <mxmanghi@apache.org>
    * rivet/rivet-tcl/xml.tcl: revised command for simple XML string mark up

2012-12-18 Massimo Manghi <mxmanghi@apache.org>
    * src/librivet/rivetPkgInit.c: package version taken from preprocessor symbol